--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
       <title>You Can Close This Tab</title>
     </head>
     <body>
+      <iframe width=100% height=100%></iframe>
     </body>
   </html>
