--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
   <html>
     <head>
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2276564812346002"
+     crossorigin="anonymous"></script>
       <title>You Can Close This Tab</title>
     </head>
     <body>
