--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <head>
       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2276564812346002"
      crossorigin="anonymous"></script>
+      <style type="text/css"> 
+        html { overflow: auto;} 
+        html,body,div,iframe {margin: 0px; padding: 0px; height: 100%; border: none;} 
+        iframe {display: block; width: 100%; border: none; overflow-y: auto; overflow-x: hidden; }
+      </style>
       <title>You Can Close This Tab</title>
     </head>
     <body>
