--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2276564812346002"
      crossorigin="anonymous"></script>
       <style type="text/css"> 
-        html { overflow: auto;} 
-        html,body,div,iframe {margin: 0px; padding: 0px; height: 100%; border: none;} 
-        iframe {display: block; width: 100%; border: none; overflow-y: auto; overflow-x: hidden; }
+       .box {
+  background:grey;
+  position:absolute;
+  top:0px;
+  right:0px;
+  bottom:0px;
+  left:0px;
+}
       </style>
       <title>You Can Close This Tab</title>
     </head>
     <body>
-      <iframe width=100% height=100%></iframe>
+      <div class="box">
+        <iframe width=0px height=0px></iframe>
+      </div>
     </body>
   </html>
