--- a/index.html
+++ b/index.html
@@ -12,12 +12,21 @@
   bottom:0px;
   left:0px;
 }
+.iframe-container {
+		text-align:center;
+  	width:100%;
+  	bottom:0;
+  	top:0;
+  	position:absolute;
+  }
       </style>
       <title>You Can Close This Tab</title>
     </head>
     <body>
       <div class="box">
-        <iframe width=0px height=0px></iframe>
+        <div class="iframe-container">
+          <iframe frameborder="0" width="95%" height="95%"></iframe>
+        </div>
       </div>
     </body>
   </html>
